--- a/less/variables.less
+++ b/less/variables.less
@@ -44,10 +44,10 @@
 
 // DEGRADES
 .orangenta {
-    background: -moz-linear-gradient(left, @orange 0%, @magenta 100%); 
-    background: -webkit-linear-gradient(left, @orange 0%,@magenta 100%); 
-    background: linear-gradient(to right, @orange 0%,@magenta 100%); 
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@orange', endColorstr='@magenta',GradientType=1 ); 
+    background: -moz-linear-gradient(left, @lorange 0%, @dorange 100%); 
+    background: -webkit-linear-gradient(left, @lorange 0%,@dorange 100%); 
+    background: linear-gradient(to right, @lorange 0%,@dorange 100%); 
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='@lorange', endColorstr='@dorange',GradientType=1 ); 
 }
 .cherple {
     background: -moz-linear-gradient(top, @cherry 0%, @purple 100%); 
@@ -199,8 +199,8 @@
 @btn-default-bg:                 @yellow;
 @btn-default-border:             darken(@yellow, 2%);
 
-@btn-primary-color:              @yellow;
-@btn-primary-bg:                 @brand-primary;
+@btn-primary-color:              @white;
+@btn-primary-bg:                 @dorange;
 @btn-primary-border:             darken(@btn-primary-bg, 10%);
 
 @btn-success-color:              #fff;
