--- a/less/buttons.less
+++ b/less/buttons.less
@@ -18,19 +18,22 @@
   touch-action: manipulation;
   cursor: pointer;
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
-  border: none;
-  border-bottom:3px solid transparent;
-  border-right:3px solid transparent;
-  border-top:.5px transparent solid;
-    border-left:.5px transparent solid;
+  border: none;  
+  // border-bottom:3px solid transparent;
+  // border-right:3px solid transparent;
+  // border-top:.5px transparent solid;
+  //   border-left:.5px transparent solid;
+    // border-radius:50%;
   .button-size(@padding-base-vertical; @padding-base-horizontal; @font-size-base; @line-height-base; @btn-border-radius-base);
   .user-select(none);
   .anima;
   &,
   &:active,
   &.active {
+    outline: unset;
     &:focus,
     &.focus {
+      outline: unset;
       .anima;
       .tab-focus();
     }
@@ -42,19 +45,21 @@
     .anima;
     color: @btn-default-color;
     text-decoration: none;
+    outline: unset;
   }
   
   &:active,
   &.active {
     .anima;
+    outline: unset;
     background-image: none;
     // outline: 0;
-    border-bottom:0px transparent solid;
-    border-right:0px transparent solid;
-    margin-top:3px;
-    margin-left:3px;
-    border-top:.5px transparent solid;
-    border-left:.5px transparent solid;
+    // border-bottom:0px transparent solid;
+    // border-right:0px transparent solid;
+    // margin-top:3px;
+    // margin-left:3px;
+    // border-top:.5px transparent solid;
+    // border-left:.5px transparent solid;
     // .box-shadow(inset 0 3px 5px rgba(0, 0, 0, .125));
   }
   
