--- a/less/ola.less
+++ b/less/ola.less
@@ -1282,7 +1282,8 @@ a, button, .ola {
       background:@white;
       padding: 10px 8px 0 0;
       position: fixed;
-      top:2vh;
+      // top:2vh;
+      top:unset;
       // bottom:2vh;
       left:-30px;
       z-index:2147483650;
