--- a/less/ola.less
+++ b/less/ola.less
@@ -1798,11 +1798,43 @@ a, button, .ola {
     }
     #redes {
       .grafico {
-        .circle-purple, .circle-magenta,  
-       .bar-cherry, .bar-cyan, 
-        .line-cherry, .line-cyan, {          
-          display: none!important;
-      } 
+        .circle-purple {
+          left: 90px;
+          height: 247px;
+          width: 247px;
+          bottom: 250px;
+        }
+        .circle-magenta {
+          height: 280px;
+          width: 280px;
+          bottom: 350px;
+          right: -182px;
+        }
+        .bar-cherry {
+          bottom: 510px;
+          right: -170px;
+        }
+        .bar-cyan {
+          bottom: 450px;
+          right: -290px;
+        }
+        .bar-white {
+          bottom: 700px;
+          right: -10px;
+        }
+        .line-cyan {
+          bottom: 550px;
+          right: 40px;
+        }
+        .line-cherry {
+          bottom: 395px;
+          right: -40px;
+        }
+      //   .circle-purple, .circle-magenta,  
+      //   .bar-cherry, .bar-cyan, 
+      //    .line-cherry, .line-cyan, {          
+      //      display: none!important;
+      //  } 
         .modelo-1 {
           // bottom: 556px;
           // bottom: 65vh;
@@ -2022,7 +2054,12 @@ a, button, .ola {
         }
       }
       .grafico{
-        // bottom:120px;              
+        // bottom:120px;
+      //  .circle-purple, .circle-magenta,  
+      //  .bar-cherry, .bar-cyan, 
+      //   .line-cherry, .line-cyan, {          
+      //     display: none!important;
+      // }        
 
         .modelo-1 img {
           bottom: 271px;
