--- a/less/ola.less
+++ b/less/ola.less
@@ -732,7 +732,8 @@ a, button, .ola {
     background: @white; 
     z-index: 900;
     position: relative;
-    height: 320px;
+    height: 360px;
+    display: contents;
     box-shadow: 0px 3px 4px @gray-light, 0px -3px 4px @gray-lighter;
     #depoimentos {
       padding: 15px 0 30px;
